<resources>
    <string name="app_name">MyMovies</string>
    <string name="action_settings">Settings</string>
    <string name="movie_list_fragment_label">Item List</string>
    <string name="item_edit_fragment_label">Item Edit</string>
    <string name="hint_movie_name">Movie name</string>
    <string name="hint_movie_length">120m</string>
    <string name="hint_date">01/01/1900</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="item_list_fragment">Item list fragment</string>
    <string name="item_edit_fragment">Item edit fragment</string>
</resources>