<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_movie_list">

    <fragment
        android:id="@+id/fragment_login"
        android:name="com.example.mymovies.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/fragment_movie_list"
        android:name="com.example.mymovies.todo.movies.MovieListFragment"
        android:label="@string/movie_list_fragment_label"
        tools:layout="@layout/fragment_movie_list">

        <action
            android:id="@+id/action_MovieListFragment_to_MovieEditFragment"
            app:destination="@id/fragment_movie_edit"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/fragment_movie_list" />
    </fragment>
    <fragment
        android:id="@+id/fragment_movie_edit"
        android:name="com.example.mymovies.todo.movie.MovieEditFragment"
        android:label="@string/item_edit_fragment_label"
        tools:layout="@layout/fragment_movie_edit">

        <action
            android:id="@+id/action_MovieEditFragment_to_MovieListFragment"
            app:destination="@id/fragment_movie_list"
            app:popUpTo="@id/fragment_movie_list"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>